# DaisyToolchain

./: .gitignore  README.md
installer/: CMakeLists.txt  NSIS.template.in  Readme.md  create_installers.sh  create_macos.sh  create_windows.sh  hello_world.c
installer/resources/: license.txt
installer/resources/NSIS/: NSIS.installoptions.ini.in  NSIS.template.in
macOS/: README.md  easy-build.sh  gcc-arm-embedded-10.rb  install.command  install.sh  macos_installer.py  text.py  uninstall.command
macOS/DaisyToolchain/: install.py
macOS/application/: README.md
macOS/application/capstone/: INSTALL_RECEIPT.json
macOS/application/capstone/lib/pkgconfig/: capstone.pc
macOS/application/hidapi/: INSTALL_RECEIPT.json
macOS/application/hidapi/lib/: libhidapi.0.dylib
macOS/application/libftdi/: INSTALL_RECEIPT.json
macOS/application/libftdi/lib/: libftdi1.2.dylib  libftdipp1.dylib
macOS/application/libusb/: INSTALL_RECEIPT.json
macOS/application/libusb-compat/: INSTALL_RECEIPT.json
macOS/application/libusb-compat/lib/: libusb-0.1.4.dylib
macOS/application/openocd/: ChangeLog  INSTALL_RECEIPT.json
macOS/application/openocd/libexec/: libftdi1.2.5.0.dylib  libftdi1.2.dylib  libhidapi.0.13.1.dylib  libusb-1.0.0.dylib
macOS/autoconf/2.69/: INSTALL_RECEIPT.json
macOS/autoconf/2.69/.brew/: autoconf.rb
macOS/autoconf/2.69/share/autoconf/: autom4te.cfg
macOS/automake/1.16.3/: ChangeLog  INSTALL_RECEIPT.json
macOS/automake/1.16.3/.brew/: automake.rb
macOS/boost/1.75.0_2/: INSTALL_RECEIPT.json
macOS/boost/1.75.0_2/.brew/: boost.rb
macOS/boost/1.75.0_2/lib/: libboost_atomic-mt.dylib  libboost_chrono-mt.dylib  libboost_chrono.dylib  libboost_container-mt.dylib  libboost_container.dylib  libboost_context-mt.dylib  libboost_contract-mt.dylib  libboost_contract.dylib  libboost_coroutine-mt.dylib  libboost_coroutine.dylib  libboost_date_time-mt.dylib  libboost_date_time.dylib  libboost_fiber-mt.dylib  libboost_filesystem-mt.dylib  libboost_filesystem.dylib  libboost_graph-mt.dylib  libboost_graph.dylib  libboost_iostreams-mt.dylib  libboost_iostreams.dylib  libboost_json-mt.dylib  libboost_json.dylib  libboost_locale-mt.dylib  libboost_log-mt.dylib  libboost_log.dylib  libboost_log_setup-mt.dylib  libboost_log_setup.dylib  libboost_math_c99-mt.dylib  libboost_math_c99.dylib  libboost_math_c99f-mt.dylib  libboost_math_c99f.dylib  libboost_math_c99l-mt.dylib  libboost_math_c99l.dylib  libboost_math_tr1-mt.dylib  libboost_math_tr1.dylib  libboost_math_tr1f-mt.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l-mt.dylib  libboost_math_tr1l.dylib  libboost_nowide-mt.dylib  libboost_nowide.dylib  (+29 more)
macOS/capstone/4.0.2/: INSTALL_RECEIPT.json
macOS/capstone/4.0.2/.brew/: capstone.rb
macOS/confuse/3.3/: INSTALL_RECEIPT.json
macOS/confuse/3.3/.brew/: confuse.rb
macOS/confuse/3.3/lib/: libconfuse.2.dylib  libconfuse.dylib
macOS/darwin/Resources/: conclusion.html  uninstall.sh  welcome.html
macOS/darwin/scripts/: postinstall
macOS/dfu-util/0.10/: ChangeLog  INSTALL_RECEIPT.json
macOS/dfu-util/0.10/.brew/: dfu-util.rb
macOS/gcc-arm-embedded/.metadata/: config.json
macOS/gcc-arm-none-eabi/arm-none-eabi/lib/: libstdc++.a-gdb.py
macOS/hidapi/0.10.1/: INSTALL_RECEIPT.json
macOS/hidapi/0.10.1/.brew/: hidapi.rb
macOS/hidapi/0.10.1/lib/: libhidapi.0.dylib
macOS/icu4c/68.2/: INSTALL_RECEIPT.json
macOS/icu4c/68.2/.brew/: icu4c.rb
macOS/icu4c/68.2/lib/: libicudata.dylib  libicui18n.68.2.dylib  libicuio.68.2.dylib  libicuio.68.dylib  libicutest.68.2.dylib  libicutest.dylib  libicutu.68.2.dylib  libicutu.dylib  libicuuc.68.2.dylib
macOS/icu4c/68.2/sbin/: escapesrc  genccode  gencmn  gennorm2  gensprep  icupkg
macOS/libftdi/1.5_2/: INSTALL_RECEIPT.json
macOS/libftdi/1.5_2/.brew/: libftdi.rb
macOS/libftdi/1.5_2/lib/: libftdi1.2.5.0.dylib  libftdi1.dylib  libftdipp1.2.5.0.dylib  libftdipp1.3.dylib  libftdipp1.dylib
macOS/libtool/2.4.6_2/: INSTALL_RECEIPT.json
macOS/libtool/2.4.6_2/.brew/: libtool.rb
macOS/libtool/2.4.6_2/lib/: libltdl.7.dylib
macOS/libusb-compat/0.1.5_1/: INSTALL_RECEIPT.json
macOS/libusb-compat/0.1.5_1/.brew/: libusb-compat.rb
macOS/libusb-compat/0.1.5_1/lib/: libusb-0.1.4.dylib
macOS/libusb/1.0.24/: INSTALL_RECEIPT.json
macOS/libusb/1.0.24/.brew/: libusb.rb
macOS/make/4.3/: INSTALL_RECEIPT.json
macOS/make/4.3/.brew/: make.rb
macOS/open-ocd/0.11.0/: INSTALL_RECEIPT.json
macOS/open-ocd/0.11.0/.brew/: open-ocd.rb
macOS/pkg-config/0.29.2_3/: INSTALL_RECEIPT.json
macOS/pkg-config/0.29.2_3/.brew/: pkg-config.rb
macOS/texinfo/6.7/: ChangeLog  INSTALL_RECEIPT.json  NEWS
macOS/texinfo/6.7/.brew/: texinfo.rb
macos/arm-none-eabi/lib/ldscripts/: armelf.xbn  armelf.xce  armelf.xse
macos/libexec/: man
macos/libexec/gnuman/man1/: make.1
macos/share/man/man1/: dfu-util.1
windows/: install.bat
windows/arm-none-eabi/: README.md
windows/distro-info/scripts/: host-defs-source.sh
windows/distro-info/scripts/helper/: common-apps-functions-source.sh  common-functions-source.sh  host-functions-source.sh  test-functions-source.sh
windows/doc/: README.md
windows/lib/: README.md
windows/lib/make/: make.nupkg  make.nuspec
windows/lib/make/tools/: LICENSE.txt  VERIFICATION.txt
windows/scripts/: README.md
windows/share/: README.md
windows/share/doc/info/: openocd.info  openocd.info-1  openocd.info-2
(+314 files in other folders)
